<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#69B7E6"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.AddProductActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_category"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/text_category"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/category"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:gravity="center" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:hint="@string/example_title"
            android:inputType="text" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_price"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/text_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/price"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            android:hint="@string/example_price"
            android:inputType="numberDecimal" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_descrription"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/description"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:hint="@string/example_description"
            android:inputType="textMultiLine"
            android:maxLines="6" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_image"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/image"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_product"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/product_image"
                app:layout_constraintBottom_toTopOf="@id/button_pick_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/button_pick_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:backgroundTint="#1565C0"
                android:gravity="center"
                android:text="@string/selection_image"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/image_product"
                app:layout_constraintStart_toStartOf="@id/image_product"
                app:layout_constraintTop_toBottomOf="@id/image_product"
                app:layout_constraintVertical_chainStyle="packed" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#1565C0"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textSize="25sp" />

</LinearLayout>