<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/product_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/product_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/product_price"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description" />

    <ImageView
        android:id="@+id/image_product"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/text_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_title"
        app:layout_constraintTop_toTopOf="@id/text_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#979595"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_price" />

    <ImageView
        android:id="@+id/image_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toBottomOf="@id/text_price"
        app:layout_constraintEnd_toEndOf="@id/image_product"
        app:layout_constraintTop_toTopOf="@id/text_price" />

    <ImageView
        android:id="@+id/image_less"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_less"
        app:layout_constraintBottom_toBottomOf="@id/text_price"
        app:layout_constraintStart_toStartOf="@id/image_product"
        app:layout_constraintTop_toTopOf="@id/text_price" />

    <TextView
        android:id="@+id/text_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/text_price"
        app:layout_constraintEnd_toStartOf="@id/image_more"
        app:layout_constraintStart_toEndOf="@id/image_less"
        app:layout_constraintTop_toTopOf="@id/text_price" />


</androidx.constraintlayout.widget.ConstraintLayout>